--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package-to-ui",
+  "name": "package-to-counter",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
